@@ -131,9 +131,8 @@ this repository contains the full copyright notices and license terms. -->
             <field name="type">tree</field>
             <field name="arch" type="xml">
                 <![CDATA[
-                <tree string="Shortcuts" keyword_open="1" fill="1"
-                    sequence="sequence">
-                    <field name="name"/>
+                <tree string="Shortcuts" keyword_open="1" sequence="sequence">
+                    <field name="name" expand="1"/>
                 </tree>
                 ]]>
             </field>
